Fix -webkit-overflow-scrolling in ios make before ele hide

--- a/themes/Material-T/source/css/_custom/custom.styl
+++ b/themes/Material-T/source/css/_custom/custom.styl
@@ -1,7 +1,7 @@
 // Custom styles
 
 .iseeu.highlight{
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 }
 
 // post hover
